2013-04-11  Guillaume Lazzara  <z@lrde.epita.fr>

	Add references to code examples

	* doc/DoxygenLayout.xml: Change example section name.

	* doc/examples.dox: Add more links to example files.

2013-04-11  Guillaume Lazzara  <z@lrde.epita.fr>

	Hide internal API and classes in documentation.

	* doc/Doxyfile.in: Exclude internal symbols and classes.

	* mln/core/alias/vec2d.hh,
	* mln/core/alias/vec3d.hh,
	* mln/core/box_runend_piter.hh,
	* mln/core/box_runstart_piter.hh,
	* mln/core/dpoints_pixter.hh,
	* mln/core/dpsites_piter.hh,
	* mln/core/faces_psite.hh,
	* mln/core/image/ch_piter.hh,
	* mln/core/image/complex_image.hh,
	* mln/core/image/complex_neighborhood_piter.hh,
	* mln/core/image/complex_window_piter.hh,
	* mln/core/image/dmorph/extended.hh,
	* mln/core/image/dmorph/extension_fun.hh,
	* mln/core/image/dmorph/extension_ima.hh,
	* mln/core/image/dmorph/extension_val.hh,
	* mln/core/image/dmorph/hexa.hh,
	* mln/core/image/dmorph/hexa_piter.hh,
	* mln/core/image/dmorph/image_if.hh,
	* mln/core/image/dmorph/p2p_image.hh,
	* mln/core/image/dmorph/slice_image.hh,
	* mln/core/image/dmorph/sub_image.hh,
	* mln/core/image/dmorph/sub_image_if.hh,
	* mln/core/image/dmorph/transformed_image.hh,
	* mln/core/image/dmorph/unproject_image.hh,
	* mln/core/image/edge_image.hh,
	* mln/core/image/flat_image.hh,
	* mln/core/image/graph_window_if_piter.hh,
	* mln/core/image/graph_window_piter.hh,
	* mln/core/image/image1d.hh,
	* mln/core/image/image2d.hh,
	* mln/core/image/image3d.hh,
	* mln/core/image/imorph/decorated_image.hh,
	* mln/core/image/imorph/interpolated.hh,
	* mln/core/image/imorph/labeled_image.hh,
	* mln/core/image/imorph/lazy_image.hh,
	* mln/core/image/imorph/plain.hh,
	* mln/core/image/imorph/safe.hh,
	* mln/core/image/imorph/tr_image.hh,
	* mln/core/image/vertex_image.hh,
	* mln/core/image/vmorph/cast_image.hh,
	* mln/core/image/vmorph/fun_image.hh,
	* mln/core/image/vmorph/thru_image.hh,
	* mln/core/image/vmorph/violent_cast_image.hh,